--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -7,6 +7,7 @@
 <link rel="import" href="./ui/game-menu.html">
 <link rel="import" href="./ui/game-dialog.html">
 <link rel="import" href="./ui/loot-dialog.html">
+<link rel="import" href="./ui/player-inventory.html">
 
 <!--
     @author Robin Duda
@@ -61,6 +62,7 @@
                 <player-status></player-status>
                 <game-dialog></game-dialog>
                 <loot-dialog></loot-dialog>
+                <player-inventory></player-inventory>
                 <chat-box></chat-box>
                 <spell-bar></spell-bar>
                 <game-menu></game-menu>
