--- a/prototype/website/src/game-app/character-create.html
+++ b/prototype/website/src/game-app/character-create.html
@@ -68,6 +68,7 @@
             }
 
             .character-class {
+                min-height: 128px;
                 margin-top: 16px;
                 display: block;
                 position: relative;
