--- a/prototype/website/src/game-app/stats-view.html
+++ b/prototype/website/src/game-app/stats-view.html
@@ -99,12 +99,14 @@
         _toList() {
             let stats = [];
 
-            Object.keys(this.selected.stats).forEach((key, index) => {
-                stats.splice(index, 0, {
-                    name: key,
-                    value: this.selected.stats[key].toFixed((key === 'movement' ? 1 : 0))
+            if (this.selected && this.selected.stats) {
+                Object.keys(this.selected.stats).forEach((key, index) => {
+                    stats.splice(index, 0, {
+                        name: key,
+                        value: this.selected.stats[key].toFixed((key === 'movement' ? 1 : 0))
+                    });
                 });
-            });
+            }
             return stats;
         }
 
