fix; show slots for items in inventory again

--- a/prototype/website/src/game-app/ui/inventory-item.html
+++ b/prototype/website/src/game-app/ui/inventory-item.html
@@ -155,7 +155,7 @@
                     case 'none':
                         return '';
                     default:
-                        if (item.armorType !== 'none') {
+                        if (item.armorType) {
                             return item.armorType;
                         } else {
                             return item.slot;
