--- a/prototype/website/src/game-app/ui/player-inventory.html
+++ b/prototype/website/src/game-app/ui/player-inventory.html
@@ -88,7 +88,9 @@
             #loot-items {
                 display: flex;
                 flex-wrap: wrap;
-                justify-content: center;
+                justify-content: left;
+                padding: 24px;
+                min-height: 48px;
             }
 
             .slot_row {
