--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -6,6 +6,7 @@
 <link rel="import" href="./ui/spell-bar.html">
 <link rel="import" href="./ui/game-menu.html">
 <link rel="import" href="./ui/game-dialog.html">
+<link rel="import" href="./ui/death-dialog.html">
 <link rel="import" href="./ui/loot-dialog.html">
 <link rel="import" href="./ui/player-inventory.html">
 
@@ -61,6 +62,7 @@
             <template is="dom-if" if="[[!loading]]">
                 <player-status></player-status>
                 <game-dialog></game-dialog>
+                <death-dialog></death-dialog>
                 <loot-dialog></loot-dialog>
                 <player-inventory></player-inventory>
                 <chat-box></chat-box>
