fixes to styling of interface-box/iron-icon + version message onconnect.

--- a/prototype/website/src/game-app/character-list.html
+++ b/prototype/website/src/game-app/character-list.html
@@ -37,7 +37,8 @@
                 cursor: pointer;
                 width: 128px;
                 height: 154px;
-                margin-left: 32px;
+                margin-left: 16px;
+                margin-right: 16px;
                 margin-bottom: 48px;
                 float: left;
             }
