--- a/prototype/website/src/game-app/ui/game-dialog.html
+++ b/prototype/website/src/game-app/ui/game-dialog.html
@@ -26,11 +26,6 @@
                 z-index: 999;
             }
 
-            .interface-box {
-                background-color: #000000;
-                opacity: 1;
-            }
-
             span {
                 padding: 0.28rem;
             }
@@ -64,10 +59,6 @@
                 list-style-type: none;
             }
 
-            #dialog-close:hover {
-                color: var(--player-class-theme);
-            }
-
             #dialog-close {
                 position: absolute;
                 right: 8px;
@@ -94,7 +85,7 @@
                 z-index: 500;
             }
 
-            #overlay {
+            .overlay {
                 width: 100%;
                 height: 100%;
                 z-index: 400;
@@ -106,21 +97,19 @@
         </style>
 
         <div id="container">
-            <div id="overlay"></div>
+            <div class="overlay"></div>
+                <paper-material elevation="3" class="interface-box" id="dialog">
+                    <iron-icon icon="icons:close" id="dialog-close" on-down="_stop"></iron-icon>
 
-            <paper-material elevation="3" class="interface-box" id="dialog">
-                <iron-icon icon="icons:close" id="dialog-close" on-down="_stop"></iron-icon>
+                    <span class="dialog-entity">[[entity]]</span>
+                    <span class="dialog-text">[[text]]</span>
 
-                <span class="dialog-entity">[[entity]]</span>
-                <span class="dialog-text">[[text]]</span>
-
-                <ul class="dialog-option-list">
-                    <template is="dom-repeat" items="[[lines]]" as="line">
-                        <li><span class="dialog-option" on-down="_select">[[_parse(line.text)]]</span></li>
-                    </template>
-                </ul>
-
-            </paper-material>
+                    <ul class="dialog-option-list">
+                        <template is="dom-repeat" items="[[lines]]" as="line">
+                            <li><span class="dialog-option" on-down="_select">[[_parse(line.text)]]</span></li>
+                        </template>
+                    </ul>
+                </paper-material>
         </div>
     </template>
     <script>
